--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
